# robotics-drone-interview-based-course

./: .gitignore  CLAUDE_SESSION_LOG.md  INTERVIEW_PREP.md  LICENSE  README.md  SETUP.md  create_all.py  package.xml  setup.cfg  setup.py
week_02/: README.md  package.xml  setup.cfg  setup.py
week_02/lab_exercises/: README.md  generate_sensor_data.py  task1_prediction.py  task2_encoder_update.py  task3_gps_update.py  task4_jacobians.py  task5_covariance_tuning.py  task6_full_ekf.py  task7_evaluation.py
week_02/lab_exercises/data/: encoder_data.npy  gps_data.npy  ground_truth.npy  imu_data.npy
week_02/lab_solutions/: task1_prediction_solution.py  task2_encoder_update_solution.py  task3_gps_update_solution.py  task4_jacobians_solution.py  task5_covariance_tuning_solution.py  task6_full_ekf_solution.py  task7_evaluation_solution.py
week_02/lecture/: Week2_Sensor_Fusion_EKF.html
week_02/lecture_public/: Week2_Sensor_Fusion_EKF.html
week_02/resources/: references.md
week_02/w02_exercises/: README.md  download_data.sh  exercise1_node.py  exercise2_node.py  exercise3_node.py  generate_bag.py
week_02/w02_exercises/config/: params.yaml  rviz_config.rviz
week_02/w02_exercises/launch/: demo.launch.py  exercise1.launch.py  exercise2.launch.py  exercise3.launch.py
week_02/w02_solutions/: solution1_node.py  solution2_node.py  solution3_node.py
week_05/: README.md  package.xml  setup.cfg  setup.py
week_05/lab_exercises/: README.md  generate_nav_data.py  task1_costmap.py  task2_astar.py  task3_dwa.py  task4_particle_filter.py  task5_behavior_tree.py  task6_waypoint_navigation.py  task7_full_navigation.py
week_05/lab_exercises/data/: grid_map.npy  laser_scans.npy  map_metadata.npy  robot_footprint.npy  scan_poses.npy  waypoints.npy
week_05/lab_solutions/: task1_solution.py  task2_solution.py  task3_solution.py  task4_solution.py  task5_solution.py  task6_solution.py  task7_solution.py
week_05/lecture/: Week5_ROS2_Nav2.html
week_05/lecture_public/: Week5_ROS2_Nav2.html
week_05/resources/: references.md
week_05/w05_exercises/: README.md  download_data.sh  exercise1_node.py  exercise2_node.py  exercise3_node.py  generate_bag.py
week_05/w05_exercises/config/: params.yaml  rviz_config.rviz
week_05/w05_exercises/launch/: demo.launch.py  week5.launch.py
week_05/w05_solutions/: solution1_node.py  solution2_node.py  solution3_node.py
week_06/: README.md  package.xml  setup.cfg  setup.py
week_06/lab_exercises/: README.md  quadrotor_sim.py  task1_rotation_math.py  task2_dynamics_model.py  task3_pid_attitude.py  task4_motor_mixing.py  task5_cascaded_control.py  task6_complementary_filter.py  task7_full_simulation.py
week_06/lab_solutions/: task1_solution.py  task2_solution.py  task3_solution.py  task4_solution.py  task5_solution.py  task6_solution.py  task7_solution.py
week_06/lecture/: Week6_Quadrotor_Dynamics.html
week_06/lecture_public/: Week6_Quadrotor_Dynamics.html
week_06/resources/: references.md
week_06/w06_exercises/: README.md  download_data.sh  exercise1_node.py  exercise2_node.py  exercise3_node.py  generate_bag.py
week_06/w06_exercises/config/: params.yaml  (+1 more)
week_06/w06_solutions/: solution1_node.py  solution2_node.py  solution3_node.py
week_07/: README.md  package.xml  setup.cfg  setup.py
week_07/lab_exercises/: README.md  px4_sim.py  task1_mavlink_protocol.py  task2_flight_modes.py  task3_offboard_control.py  task4_mission_planning.py  task5_sensor_integration.py  task6_failsafe.py  task7_full_integration.py
week_07/lab_solutions/: task1_solution.py  task2_solution.py  task3_solution.py  task4_solution.py  task5_solution.py  task6_solution.py  task7_solution.py
week_07/lecture/: Week7_PX4_ArduPilot_ROS2.html
week_07/lecture_public/: Week7_PX4_ArduPilot_ROS2.html
week_07/resources/: references.md
week_07/w07_exercises/: README.md  download_data.sh  exercise1_node.py  exercise2_node.py  exercise3_node.py  generate_bag.py
week_07/w07_solutions/: solution1_node.py  solution2_node.py  solution3_node.py
week_10/: README.md  package.xml  setup.cfg  setup.py
week_10/lab_exercises/: README.md  generate_vision_data.py  task1_camera_model.py  task2_feature_detection.py  task3_homography.py  task4_object_detection.py  task5_stereo_depth.py  task6_optical_flow.py  task7_full_vision.py
week_10/lab_solutions/: task1_solution.py  task2_solution.py  task3_solution.py  task4_solution.py  task5_solution.py  task6_solution.py  task7_solution.py
week_10/lecture/: Week10_Computer_Vision_Drones.html
week_10/lecture_public/: Week10_Computer_Vision_Drones.html
week_10/resources/: references.md
week_10/w10_exercises/: README.md  download_data.sh  exercise1_node.py  exercise2_node.py  exercise3_node.py  generate_bag.py
week_10/w10_solutions/: solution1_node.py  solution2_node.py  solution3_node.py
week_12/: README.md  __init__.py  package.xml  setup.cfg  setup.py
week_12/lab_exercises/: README.md  capstone_sim.py  task1_system_architecture.py  task2_sensor_fusion_integration.py  task3_planning_control_integration.py  task4_perception_pipeline.py  task5_full_mission.py  task6_stress_testing.py  task7_evaluation.py
week_12/lab_solutions/: __init__.py  task1_solution.py  task2_solution.py  task3_solution.py  task4_solution.py  task5_solution.py  task6_solution.py  task7_solution.py
week_12/lecture/: Week12_System_Integration_Capstone.html
week_12/lecture_public/: Week12_System_Integration_Capstone.html
week_12/resources/: references.md
week_12/w12_exercises/: README.md  download_data.sh  exercise1_node.py  exercise2_node.py  exercise3_node.py  generate_bag.py
week_12/w12_solutions/: solution1_node.py  solution2_node.py  solution3_node.py
(+290 files in other folders)
