<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>week_07_px4_integration</name>
  <version>1.0.0</version>
  <description>Week 7: PX4/ArduPilot and ROS2 Integration</description>
  <maintainer email="abdul.khan@example.com">Dr. Abdul Manan Khan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>python3-numpy</depend>
  <depend>python3-matplotlib</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
