<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>week_10_computer_vision</name>
  <version>1.0.0</version>
  <description>Week 10: Computer Vision for Drones - Camera models, feature detection, homography, object detection, stereo depth, optical flow</description>
  <maintainer email="abdul.khan@example.com">Dr. Abdul Manan Khan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
