<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>week_12_capstone</name>
  <version>1.0.0</version>
  <description>Week 12: Full System Integration and Capstone Project - combining all subsystems into a complete autonomous drone</description>
  <maintainer email="abdul.khan@example.com">Dr. Abdul Manan Khan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
